[#501] Add FDA search page living in different connection
This continues with the refactoring to use HapiJS plugins for different
functionalities, adding a FDA plugin that creates a search page for the FDA
data, living in a different connection. This means we can host the sites in
different domains.

opentrials/opentrials#501
